[project]
name = "neo4j-private-link"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
setup-private-link = "neo4j_private_link.setup:main"
approve-private-link = "neo4j_private_link.approve:main"
attach-ncc = "neo4j_private_link.attach_ncc:main"
teardown-private-link = "neo4j_private_link.teardown:main"
verify-private-link = "neo4j_private_link.verify:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neo4j_private_link"]
